--- a/property_select.html
+++ b/property_select.html
@@ -71,7 +71,8 @@
       const propertyListDiv = document.getElementById('property-list');
       propertyListDiv.innerHTML = '<p>物件情報を読み込み中です...</p>'; 
 
-      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbxK0J0flRSGNdM9mi8AIRImmYqRNoWS9hS9alZUYlvvDgMFMyjeuvc2XQxOkYuP_3B3XQ/exec';
+      // ★★★ 修正版物件.gsデプロイ後に新しいURLに更新してください ★★★
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbw4WvAEJ6uazs_b2ro-_SXshoXOjLTSWcCNghRijRqW3adsd_zjCUEUxNQbiGhuLuaGvw/exec';
 
       try {
         const response = await fetch(`${gasWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
