--- a/meter_reading.html
+++ b/meter_reading.html
@@ -208,7 +208,7 @@
 <body>
   <button id="back-button-meter" style="margin-bottom: 10px; padding: 8px 12px;">部屋選択へ戻る</button>
   <h1>検針情報</h1>
-  <div id="debug-info" style="border: 1px solid red; padding: 10px; margin-top: 10px; white-space: pre-wrap; font-size: 10px; background-color: #f0f0f0; color: black;">デバッグ情報エリア</div>
+  <div id="debug-info" style="border: 1px solid red; padding: 10px; margin-top: 10px; white-space: pre-wrap; font-size: 10px; background-color: #f0f0f0; color: black; display: none;">デバッグ情報エリア</div>
 
   <div class="info-section">
     <h2>物件・部屋情報</h2>
