--- a/meter_reading.html
+++ b/meter_reading.html
@@ -773,24 +773,22 @@
                                   const currentValue = e.target.value;
                                   const previousValue = e.target.getAttribute('data-previous-reading');
                                   const usageCell = e.target.closest('tr').querySelector('td[data-label="今回使用量"]');
-                                  
-                                  if (currentValue && previousValue && previousValue !== 'N/A' && usageCell) {
+                                    if (currentValue && previousValue && previousValue !== 'N/A' && usageCell) {
                                     const usage = calculateUsage(currentValue, previousValue);
                                     usageCell.textContent = usage + '㎥';
                                     usageCell.style.color = '#007bff';
                                     usageCell.style.fontWeight = 'bold';
                                   } else if (usageCell) {
-                                    usageCell.textContent = reading.usage || '0㎥';
+                                    usageCell.textContent = '0';
                                     usageCell.style.color = '';
                                     usageCell.style.fontWeight = '';
                                   }
                                 }}
                               />
-                            </td>
-                            <td data-label="前回">{prevReadingText}</td>
+                            </td>                            <td data-label="前回">{prevReadingText}</td>
                             <td data-label="前々回">{prevPrevReadingText}</td>
                             <td data-label="前々々回">{prevPrevPrevReadingText}</td>
-                            <td data-label="今回使用量">{reading.usage || '0㎥'}</td>
+                            <td data-label="今回使用量">0</td>
                             <td data-label="状態">{reading.status || 'N/A'}</td>
                             <td data-label="写真" data-date-photo={dateForDataAttribute}>
                               <button
@@ -854,21 +852,19 @@
                                 required
                                 onInput={(e) => {
                                   e.target.value = e.target.value.replace(/[^0-9]/g, '');
-                                  e.target.style.borderColor = '';
-                                  // 初回検針では使用量は常に0㎥
+                                  e.target.style.borderColor = '';                                  // 初回検針では使用量は常に0
                                   const usageCell = e.target.closest('tr').querySelector('td[data-label="今回使用量"]');
                                   if (usageCell) {
-                                    usageCell.textContent = '0㎥';
+                                    usageCell.textContent = '0';
                                     usageCell.style.color = '#007bff';
                                     usageCell.style.fontWeight = 'bold';
                                   }
                                 }}
                               />
-                            </td>
-                            <td data-label="前回">N/A</td>
+                            </td>                            <td data-label="前回">N/A</td>
                             <td data-label="前々回">N/A</td>
                             <td data-label="前々々回">N/A</td>
-                            <td data-label="今回使用量">0㎥</td>
+                            <td data-label="今回使用量">0</td>
                             <td data-label="状態" style={{color: '#007bff', fontWeight: 'bold'}}>初回検針</td>
                             <td data-label="写真" data-date-photo={dateForDataAttribute}>
                               <button
