--- a/meter_reading.html
+++ b/meter_reading.html
@@ -754,8 +754,7 @@
                             return usage >= 0 ? usage : 0;
                           }
                           return 0;
-                        };
-                          return (
+                        };                        return (
                           <tr key={index}>
                             <td data-label="検針日時">{formattedDate}</td>
                             <td data-label="今回(㎥)">
@@ -773,7 +772,7 @@
                                   const currentValue = e.target.value;
                                   const previousValue = e.target.getAttribute('data-previous-reading');
                                   const usageCell = e.target.closest('tr').querySelector('td[data-label="今回使用量"]');
-                                    if (currentValue && previousValue && previousValue !== 'N/A' && usageCell) {
+                                  if (currentValue && previousValue && previousValue !== 'N/A' && usageCell) {
                                     const usage = calculateUsage(currentValue, previousValue);
                                     usageCell.textContent = usage + '㎥';
                                     usageCell.style.color = '#007bff';
@@ -785,7 +784,8 @@
                                   }
                                 }}
                               />
-                            </td>                            <td data-label="前回">{prevReadingText}</td>
+                            </td>
+                            <td data-label="前回">{prevReadingText}</td>
                             <td data-label="前々回">{prevPrevReadingText}</td>
                             <td data-label="前々々回">{prevPrevPrevReadingText}</td>
                             <td data-label="今回使用量">0</td>
@@ -834,8 +834,7 @@
                         const month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
                         const day = currentDate.getDate().toString().padStart(2, '0');
                         const formattedCurrentDate = `${year}年${month}月${day}日`;
-                        const dateForDataAttribute = `${year}/${month}/${day}`;
-                          return (
+                        const dateForDataAttribute = `${year}/${month}/${day}`;                        return (
                           <tr className="initial-reading-row">
                             <td data-label="検針日時">{formattedCurrentDate}</td>
                             <td data-label="今回(㎥)">
@@ -852,7 +851,8 @@
                                 required
                                 onInput={(e) => {
                                   e.target.value = e.target.value.replace(/[^0-9]/g, '');
-                                  e.target.style.borderColor = '';                                  // 初回検針では使用量は常に0
+                                  e.target.style.borderColor = '';
+                                  // 初回検針では使用量は常に0
                                   const usageCell = e.target.closest('tr').querySelector('td[data-label="今回使用量"]');
                                   if (usageCell) {
                                     usageCell.textContent = '0';
@@ -861,7 +861,8 @@
                                   }
                                 }}
                               />
-                            </td>                            <td data-label="前回">N/A</td>
+                            </td>
+                            <td data-label="前回">N/A</td>
                             <td data-label="前々回">N/A</td>
                             <td data-label="前々々回">N/A</td>
                             <td data-label="今回使用量">0</td>
